--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>New Year ✨</title>
-
-<!-- GSAP -->
-<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<meta charset="UTF-8">
+<title>Happy New Year ✨</title>
 
 <style>
 html,body{
   margin:0;
   height:100%;
   background:#0b0b14;
-  font-family:'Poppins',system-ui,sans-serif;
+  font-family:Poppins,system-ui,sans-serif;
   color:#fff;
   overflow:hidden;
 }
@@ -20,30 +17,13 @@ html,body{
 .layer{
   position:absolute;
   inset:0;
-  display:flex;
+  display:none;
   flex-direction:column;
   align-items:center;
   justify-content:center;
-  opacity:0;
-  pointer-events:none;
 }
 
-.layer.active{
-  opacity:1;
-  pointer-events:auto;
-}
-
-h1,h2,p{margin:10px 0;text-align:center;}
-
-.tap{
-  opacity:.8;
-  animation:pulse 1.2s infinite;
-}
-
-@keyframes pulse{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(1.1)}
-}
+.layer.active{ display:flex; }
 
 button{
   padding:14px 32px;
@@ -52,169 +32,174 @@ button{
   background:linear-gradient(135deg,#ffb703,#fb8500);
   font-size:16px;
   cursor:pointer;
+  margin-top:20px;
 }
 
 .light{
   position:absolute;
-  width:12px;
-  height:12px;
+  width:10px;
+  height:10px;
   border-radius:50%;
   background:gold;
+  animation:float 4s linear infinite;
 }
 
-#festivalText{
+@keyframes float{
+  from{transform:translateY(100vh)}
+  to{transform:translateY(-120px)}
+}
+
+.bubble{
   position:absolute;
-  z-index:5;
-  text-align:center;
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  background:radial-gradient(circle,#fff,#7fd8ff);
+  cursor:pointer;
+  animation:float 5s linear;
 }
 
-#festivalText h1{
-  font-size:42px;
-}
-
-#festivalText p{
-  font-size:18px;
-  opacity:.9;
-}
-
-canvas{
+.emoji{
+  font-size:40px;
   position:absolute;
-  inset:0;
+  cursor:pointer;
 }
+
+canvas{ position:absolute; inset:0; }
 </style>
 </head>
 
 <body>
 
-<!-- LAYERS -->
 <div class="layer active" id="l1">
-  <h2 class="tap">Tap to start ✨</h2>
+  <h2>Hey 👋</h2>
+  <button onclick="go(2)">Start</button>
 </div>
 
 <div class="layer" id="l2">
   <h1 id="name"></h1>
+  <button onclick="go(3)">Next</button>
 </div>
 
 <div class="layer" id="l3">
-  <p>Festival lights are coming on 🪔</p>
+  <p>Festival lights ✨</p>
+  <button onclick="go(4)">Continue</button>
 </div>
 
-<div class="layer" id="l4"></div>
+<div class="layer" id="l4">
+  <p>Pop 5 bubbles 🫧</p>
+</div>
 
 <div class="layer" id="l5">
-  <p>Tap the sparkles ✨</p>
+  <p>Tap the emojis 🎉</p>
 </div>
 
 <div class="layer" id="l6">
-  <h2>Ready?</h2>
+  <canvas id="fx"></canvas>
+  <p>Tap for fireworks 🎆</p>
+  <button onclick="go(7)">Finish</button>
 </div>
 
 <div class="layer" id="l7">
-  <canvas id="fx"></canvas>
-  <div id="festivalText">
-    <h1>🎆 HAPPY NEW YEAR 🎆</h1>
-    <h2>Rii ✨</h2>
-    <p>May this year be bright, fun,<br>and full of good moments 🪔</p>
-  </div>
+  <h1>🎆 Happy New Year Rii 🎆</h1>
+  <p>
+    Wishing you lights,<br>
+    laughter,<br>
+    and a year that feels good 🪔
+  </p>
 </div>
 
 <script>
-let current = 1;
-const layers = n => document.getElementById("l"+n);
-
-document.body.addEventListener("click",()=>{
-  if(current===1) next();
-});
-
-function next(){
-  gsap.to(layers(current),{opacity:0,duration:.4});
-  current++;
-  layers(current).classList.add("active");
-  gsap.fromTo(layers(current),
-    {opacity:0,scale:.9},
-    {opacity:1,scale:1,duration:.6,ease:"power3.out"}
-  );
-
-  if(current===2) nameReveal();
-  if(current===4) floatingLights();
-  if(current===5) sparkleGame();
-  if(current===7) festival();
+function go(n){
+  document.querySelectorAll('.layer').forEach(l=>l.classList.remove('active'));
+  document.getElementById('l'+n).classList.add('active');
+  if(n===2) name();
+  if(n===3) lights();
+  if(n===4) bubbles();
+  if(n===5) emojis();
+  if(n===6) fireworks();
 }
 
-function nameReveal(){
+function name(){
   const text="Hey Rii 🌸";
-  let i=0;
-  const el=document.getElementById("name");
+  let i=0,el=document.getElementById("name");
+  el.textContent="";
   const t=setInterval(()=>{
     el.textContent+=text[i++];
-    if(i===text.length){
-      clearInterval(t);
-      setTimeout(next,700);
-    }
+    if(i===text.length) clearInterval(t);
   },120);
 }
 
-function floatingLights(){
+function lights(){
   for(let i=0;i<30;i++){
     const d=document.createElement("div");
     d.className="light";
     d.style.left=Math.random()*100+"vw";
-    d.style.top=Math.random()*100+"vh";
     d.style.background=`hsl(${Math.random()*50+20},90%,60%)`;
-    document.getElementById("l4").appendChild(d);
-    gsap.to(d,{
-      y:-100,
-      repeat:-1,
-      duration:Math.random()*3+3,
-      ease:"sine.inOut"
-    });
+    document.getElementById("l3").appendChild(d);
   }
-  setTimeout(next,2000);
 }
 
-let hits=0;
-function sparkleGame(){
-  for(let i=0;i<12;i++){
+let popped=0;
+function bubbles(){
+  popped=0;
+  const layer=document.getElementById("l4");
+  layer.innerHTML="<p>Pop 5 bubbles 🫧</p>";
+  for(let i=0;i<7;i++){
+    const b=document.createElement("div");
+    b.className="bubble";
+    b.style.left=Math.random()*80+"vw";
+    b.onclick=()=>{
+      b.remove();
+      popped++;
+      if(popped>=5) go(5);
+    };
+    layer.appendChild(b);
+  }
+}
+
+let taps=0;
+function emojis(){
+  taps=0;
+  const layer=document.getElementById("l5");
+  layer.innerHTML="<p>Tap the emojis 🎉</p>";
+  ["🎈","✨","🎊","💛"].forEach(e=>{
     const s=document.createElement("div");
-    s.className="light";
-    s.style.left=Math.random()*90+"vw";
-    s.style.top=Math.random()*80+"vh";
-    document.getElementById("l5").appendChild(s);
-    gsap.to(s,{scale:1.6,repeat:-1,yoyo:true,duration:.6});
+    s.className="emoji";
+    s.textContent=e;
+    s.style.left=Math.random()*80+"vw";
+    s.style.top=Math.random()*70+"vh";
     s.onclick=()=>{
       s.remove();
-      hits++;
-      if(hits>=6) setTimeout(next,500);
+      taps++;
+      if(taps>=3) go(6);
     };
-  }
+    layer.appendChild(s);
+  });
 }
 
-function festival(){
+function fireworks(){
   const c=document.getElementById("fx");
   const ctx=c.getContext("2d");
   c.width=innerWidth;
   c.height=innerHeight;
   const p=[];
-  function burst(x,y){
-    for(let i=0;i<40;i++){
+  c.onclick=e=>{
+    for(let i=0;i<30;i++){
       p.push({
-        x,y,
+        x:e.clientX,y:e.clientY,
         vx:(Math.random()-.5)*6,
         vy:(Math.random()-.5)*6,
-        life:60,
-        col:`hsl(${Math.random()*50+20},90%,60%)`
+        life:60
       });
     }
-  }
-  setInterval(()=>burst(Math.random()*c.width,Math.random()*c.height*.6),800);
-  c.onclick=e=>burst(e.clientX,e.clientY);
-
+  };
   function draw(){
     ctx.fillStyle="rgba(10,5,20,.2)";
     ctx.fillRect(0,0,c.width,c.height);
     p.forEach((o,i)=>{
       o.x+=o.vx;o.y+=o.vy;o.life--;
-      ctx.fillStyle=o.col;
+      ctx.fillStyle="gold";
       ctx.fillRect(o.x,o.y,3,3);
       if(o.life<=0)p.splice(i,1);
     });
