--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ html,body{
   color:#fff;
 }
 
-/* SCENES */
 .scene{
   position:absolute;
   inset:0;
@@ -29,7 +28,6 @@ html,body{
 
 .scene.active{ opacity:1; }
 
-/* TEXT */
 h1{
   font-size:44px;
   margin:6px 0;
@@ -48,8 +46,9 @@ p{
 
 /* COUNTDOWN */
 #countdown{
-  font-size:96px;
+  font-size:120px;
   font-weight:700;
+  letter-spacing:4px;
 }
 
 /* LIGHTS */
@@ -120,14 +119,13 @@ canvas{
 
 <script>
 const scenes = document.querySelectorAll(".scene");
-
 function show(i){
   scenes.forEach(s=>s.classList.remove("active"));
   scenes[i].classList.add("active");
 }
 
-/* CINEMATIC FLOW */
-const tl = gsap.timeline();
+/* MAIN TIMELINE */
+const tl = gsap.timeline({ paused:true });
 
 tl.to("#s1",{opacity:1,duration:1})
   .to("#s1",{opacity:0,duration:.6,delay:1})
@@ -152,13 +150,11 @@ tl.to("#s1",{opacity:1,duration:1})
 
   .call(()=>show(5))
   .call(startCountdown)
-  .to("#s6",{opacity:1,duration:.4})
+  .pause(); // ⛔ STOP HERE UNTIL COUNTDOWN FINISHES
 
-  .call(()=>show(6))
-  .call(festival)
-  .to("#s7",{opacity:1,duration:1.5});
+tl.play();
 
-/* NAME ANIMATION */
+/* NAME */
 function nameReveal(){
   const text="Hey Rii ✨";
   const el=document.getElementById("name");
@@ -170,7 +166,7 @@ function nameReveal(){
   },120);
 }
 
-/* FESTIVAL LIGHTS */
+/* LIGHTS */
 function festivalLights(){
   for(let i=0;i<40;i++){
     const d=document.createElement("div");
@@ -188,21 +184,37 @@ function festivalLights(){
   }
 }
 
-/* COUNTDOWN */
+/* DRAMATIC COUNTDOWN */
 function startCountdown(){
-  const el=document.getElementById("countdown");
-  let num=3;
+  show(5);
+  const el = document.getElementById("countdown");
+  let numbers = ["3","2","1"];
+  let i = 0;
 
-  const interval=setInterval(()=>{
-    num--;
-    if(num===0){
-      clearInterval(interval);
-      gsap.to("#s6",{opacity:0,duration:.4});
-    } else {
-      el.textContent=num;
-      gsap.fromTo(el,{scale:0.6},{scale:1,duration:0.5,ease:"back.out"});
-    }
-  },800);
+  function animateNumber(){
+    el.textContent = numbers[i];
+    gsap.fromTo(el,
+      {scale:0.3, opacity:0},
+      {scale:1.2, opacity:1, duration:0.6, ease:"power3.out"}
+    );
+    gsap.to(el,{
+      scale:0.6,
+      opacity:0,
+      duration:0.6,
+      delay:0.8,
+      onComplete:()=>{
+        i++;
+        if(i < numbers.length){
+          animateNumber();
+        } else {
+          show(6);
+          festival();
+          gsap.to("#s7",{opacity:1,duration:1.5});
+        }
+      }
+    });
+  }
+  animateNumber();
 }
 
 /* FIREWORKS */
